# xnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/xnet/: lan_discoverer.hpp  lan_discovery_content.hpp  multicast_base.hpp  multicast_client.hpp  multicast_server.hpp  multicast_string_content.hpp  network_interface_lister.hpp  package.hpp  package_content.hpp  package_factory.hpp  package_format.hpp  package_socket_adapter.hpp
include/xnet/detail/: finnaly.hpp  multicast_protocol.hpp  return_on_error.hpp  variadic_utils.hpp
include/xnet/package_formats/: xml_package_factory.hpp
include/xnet/serialization/: access.hpp  context.hpp  deserializer.hpp  serialization.hpp  serialization_error.hpp  serializer.hpp  split.hpp
include/xnet/serialization/detail/: primitive_operations.hpp  serialization_check.hpp  serializer_base.hpp  tagged_value.hpp
include/xnet/serialization/formats/: generic_sink.hpp  generic_source.hpp  text_sink.hpp  text_source.hpp  xml_sink.hpp  xml_source.hpp
include/xnet/serialization/formats/detail/: xml_serialization_names.hpp
include/xnet/serialization/types/: array.hpp  enum.hpp  forward_list.hpp  list.hpp  map.hpp  pair.hpp  set.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  variant.hpp  vector.hpp
include/xnet/serialization/types/detail/: serialize_sequence.hpp
include/xnet/service/: call_error.hpp  generic_service.hpp  remote_service.hpp  remote_service_helper.hpp  service_descriptor.hpp  service_peer.hpp  service_resolver.hpp
include/xnet/service/protocol/: service_protocol.hpp
samples/: CMakeLists.txt
samples/chat-sample/: chat_client.cpp  chat_client.hpp  chat_main.cpp  chat_server.cpp  chat_server.hpp  chat_service.cpp  chat_service.hpp
samples/multicaster/: CMakeLists.txt  multicaster.cpp
samples/network_interface_lister/: network_interface_lister.cpp
samples/packaging/: packaging.cpp
samples/service/: service-sample.cpp
samples/simple/: CMakeLists.txt  simle_impl.cpp  simple.cpp
samples/simple-service/: RemoteChatService.hpp  RemoteLoginService.hpp  service-definition.cpp  service-definition.hpp  simple-service-sample.cpp
src/: CMakeLists.txt  lan_discovery_content.cpp  multicast_string_content.cpp  package.cpp  package_content.cpp  package_factory.cpp  package_format.cpp
src/package_formats/: xml_package_content.cpp  xml_package_content.hpp  xml_package_factory.cpp
src/serialization/: serialization_error.cpp
src/serialization/formats/: xml_sink.cpp  xml_source.cpp
src/service/: generic_service.cpp  remote_service_backend.cpp  remote_service_backend.hpp  service_descriptor.cpp  service_peer.cpp  service_protocol.hpp
tests/interface/: serialization_tests.cpp  service_tests.cpp  variadic_utils_tests.cpp
